Fix bug: tic tac toe cells not visible
This commit fixes a bug where the tic tac toe cells were not visible due to a typo in the css/style.css file. The class name '.call' has been corrected to '.cell', and the property 'hegiht' has been corrected to 'height'.

--- a/css/style.css
+++ b/css/style.css
@@ -47,9 +47,9 @@ h1 {
     width: 100%;
 }
 
-.call {
+.cell {
     flex: 1;
-    hegiht: 100px;
+    height: 100px;
     border: 1px solid #ccc;
     text-align: center;
     line-height: 100px;
